--- a/codenames-3-web/WebContent/index.html
+++ b/codenames-3-web/WebContent/index.html
@@ -8,32 +8,34 @@
 	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 	crossorigin="anonymous">
-
+<link rel="stylesheet" type="text/css" href="assets/css/index.css" />
 <title>Codenames Bienvenu</title>
 </head>
 <body>
 
+
 	<div class="container">
 
 		<form>
+			<h1>Bienvenu chez Codenames!</h1>
+		
+	<small class="text-muted">Connectez-vous pour lancer une partie!</small>
+	
 			<div class="form-group">
 				<label for="exampleInputEmail1">Email address</label> <input
 					type="email" class="form-control" id="exampleInputEmail1"
-					aria-describedby="emailHelp" placeholder="Enter email"> <small
-					id="emailHelp" class="form-text text-muted">We'll never
-					share your email with anyone else.</small>
+					aria-describedby="emailHelp" placeholder="Enter email"> <a
+					href="https://www.w3schools.com/html/">Pas inscrit?
+					Inscrivez-vous ici!</a>
 			</div>
 			<div class="form-group">
 				<label for="exampleInputPassword1">Password</label> <input
 					type="password" class="form-control" id="exampleInputPassword1"
 					placeholder="Password">
 			</div>
-			<div class="form-group form-check">
-				<input type="checkbox" class="form-check-input" id="exampleCheck1">
-				<label class="form-check-label" for="exampleCheck1">Check me
-					out</label>
-			</div>
-			<button type="submit" class="btn btn-primary" onclick="connexion(); return false;">Submit</button>
+
+			<button type="submit" class="btn btn-primary"
+				onclick="connexion(); return false;">Submit</button>
 		</form>
 
 		<footer class="container fixed-bottom"> Copyright
