Gestion des cartes -> formulaire classique
ajout, mise à jour et suppression de carte
liste fonctionnelle

--- a/codenames-3-web/WebContent/cartes.html
+++ b/codenames-3-web/WebContent/cartes.html
@@ -95,9 +95,9 @@
 		
 		<section class="container" id="supprimerCarte">
 			<h2>Supprimer une carte</h2>
-			<!-- Formulaire de modif d'une carte -->
+			<!-- Formulaire de suppression d'une carte -->
 			<form method="GET">
-				<!-- Chaque zone est composé de 2 colonnes : 
+				<!-- Chaque zone est composée de 2 colonnes : 
 				type d'info + saisie label sur 2 colonnes
 				input et select sur 10 colonnes-->
 				
@@ -116,7 +116,7 @@
 				<div class="form-group row">
 					<div class="col-sm-3"></div>
 					<div class="col-sm-9">
-						<input class="btn btn-sucess" type="submit" value="Supprimer" onclick="supprimerCarte(); return false;" />
+						<input class="btn btn-sucess" type="submit" value="supprimer" onclick="supprimerCarte(); return false;" />
 					</div>
 				</div>
 			</form>
