Finalisation de la page de gestion des cartes

--- a/codenames-3-web/WebContent/cartes.html
+++ b/codenames-3-web/WebContent/cartes.html
@@ -123,9 +123,9 @@
 				<!-- En-tête du tableau (le titre des colonnes) -->
 				<thead>
 					<tr>
-						<th>#</th>
+						<th class="col1">#</th>
 						<th>Nom</th>
-						<th>Action</th>
+						<th class="col3"></th>
 					</tr>
 				</thead>
 				<!-- Contenu du tableau -->
@@ -134,7 +134,7 @@
 				</tbody>
 			</table>
 		</section>
-		<footer class="container fixed-bottom">
+		<footer class="container">
 			Copyright codenames.fr &copy; 2019
 		</footer>
 		
